src/objects/ACFSwitch__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Applicant_Trigger_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applicant Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_And_Liability_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Asset_And_Liability_Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Statement_SubCategory_TriggerSwitch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bank Statement SubCategory TriggerSwitch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Trigger_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Consent_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E_Consent_Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Position_Trigger_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund Position Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Position_Detail_Switch_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Position Detail Switch Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoogleCalendarEmailSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to control if Email been Sent when Exception Occur</description>
        <label>[Email Switch] Google Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Trigger_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Income Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadTriggerSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On / Off the trigger switch on Lead</description>
        <label>[Trigger Switch] Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mercury_AOL_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To enable/disable the AOL submission</description>
        <label>Mercury AOL Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mercury_Email_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To control debug log email sending to Mercury Email Receiver</description>
        <inlineHelpText>To control debug log email sending to Mercury Email Receiver</inlineHelpText>
        <label>[Email Switch] Mercury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prioritization_CFM_Email_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <description>enable/disable Prioritization CFM Email Switch</description>
        <inlineHelpText>enable/disable Prioritization CFM Email Switch</inlineHelpText>
        <label>Prioritization CFM Email Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QueuedAsyncRequestSwitch__c</fullName>
        <defaultValue>true</defaultValue>
        <description>for turn on or off the TriggerOnAsyncRequest in case of infinity loop</description>
        <label>[Trigger Switch] Async Request</label>
        <type>Checkbox</type>
    </fields>
    <label>ACF Switchs</label>
</CustomObject>